force-app/main/default/objects/Pending_Purchase_Line_Item__c/Pending_Purchase_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Pending Purchase Line Item</label>
    <nameField>
        <displayFormat>PPLIT -{0000}</displayFormat>
        <label>Pending Purchase Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Purchase Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>