force-app/main/default/objects/Pending_Purchase_Line_Item__c/fields/BPL_ID__c.field-meta.xml
<CustomField>
    <fullName>BPL_ID__c</fullName>
    <label>BPL ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>HEAD OFFICE</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>VENGERI BRANCH</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>NSD BRANCH</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MG BUDGET BUY BRANCH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>