force-app/main/default/objects/Pending_Purchase_Line_Item__c/fields/Cart_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Cart_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Line Item</label>
    <referenceTo>Cart_Line_Item__c</referenceTo>
    <relationshipLabel>Pending Purchase Line Items</relationshipLabel>
    <relationshipName>Pending_Purchase_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>