force-app/main/default/objects/Pending_Purchase_Line_Item__c/fields/Pending_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Pending_Purchase__c</fullName>
    <label>Pending Purchase</label>
    <referenceTo>Pending_Purchase__c</referenceTo>
    <relationshipLabel>Pending Purchase Line Items</relationshipLabel>
    <relationshipName>Pending_Purchase_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>