force-app/main/default/objects/Pending_Purchase_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pending Purchase Line Items</relationshipLabel>
    <relationshipName>Pending_Purchase_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>