force-app/main/default/objects/Pending_Purchase_Line_Item__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BPL_ID__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AMP0004</fullName>
                <label>AMBALAPPADY WARE HOUSE</label>
            </value>
            <value>
                <fullName>BLDS0021</fullName>
                <label>BILLABLE/DISPLAY WAREHOUSE</label>
            </value>
            <value>
                <fullName>BLKGHO16</fullName>
                <label>BLOCKING WAREHOUSE HO</label>
            </value>
            <value>
                <fullName>DJS0009</fullName>
                <label>DISPLAY-GROHE &amp; JAQUAR SHOWROOM</label>
            </value>
            <value>
                <fullName>DMS0008</fullName>
                <label>DISPLAY-MAIN SHOWROOM</label>
            </value>
            <value>
                <fullName>DVS0010</fullName>
                <label>DISPLAY-VENGERI SHOWROOM</label>
            </value>
            <value>
                <fullName>IMAM0019</fullName>
                <label>IMPORTS-AMBALAPPADY WAREHOUSE</label>
            </value>
            <value>
                <fullName>IMP0015</fullName>
                <label>IMPORTS MAIN WAREHOUSE</label>
            </value>
            <value>
                <fullName>LVGW0014</fullName>
                <label>LOAD DAMAGE MAIN WAREHOUSE</label>
            </value>
            <value>
                <fullName>MLPB0001</fullName>
                <label>MALAPARAMBA WARE HOUSE</label>
            </value>
            <value>
                <fullName>SFNS0020</fullName>
                <label>S&amp;F NSD DISPLAY</label>
            </value>
            <value>
                <fullName>STSR0005</fullName>
                <label>STORE - MAIN SHOWROOM</label>
            </value>
            <value>
                <fullName>SVGW0011</fullName>
                <label>STOCK DAMAGE MAIN WAREHOUSE</label>
            </value>
            <value>
                <fullName>VNGW0002</fullName>
                <label>VENGERI MAIN WARE HOUSE</label>
            </value>
            <value>
                <fullName>SVGS0015</fullName>
                <label>STOCK DAMAGE VENGERI SHOWROOM WAREHOUSE</label>
            </value>
            <value>
                <fullName>VNGS0003</fullName>
                <label>VENGERI SHOWROOM WAREHOUSE</label>
            </value>
            <value>
                <fullName>NSD0007</fullName>
                <label>NSD-YARD</label>
            </value>
            <value>
                <fullName>SDNS0025</fullName>
                <label>STOCK DAMAGE NSD-YARD</label>
            </value>
            <value>
                <fullName>STNS0006</fullName>
                <label>STORE-NSD</label>
            </value>
            <value>
                <fullName>BDBS0022</fullName>
                <label>BUDGET BUY SHOWROOM WAREHOUSE</label>
            </value>
            <value>
                <fullName>DBBS0023</fullName>
                <label>DISPLAY BUDGET BUY SHOWROOM</label>
            </value>
            <value>
                <fullName>LBDW0023</fullName>
                <label>LOAD DAMAGE BUDGET BUY WAREHOUSE</label>
            </value>
            <value>
                <fullName>SBDW0024</fullName>
                <label>STOCK DAMAGE BUDGET BUY WAREHOUSE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>